# python-sdk

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml
formatex/: __init__.py  _http.py  client.py  exceptions.py
tests/: test_client.py  test_e2e.py
