[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formatex"
version = "1.0.0"
description = "Python SDK for the FormatEx LaTeX-to-PDF API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "FormatEx", email = "support@formatex.com" }]
keywords = ["latex", "pdf", "formatex", "typesetting"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup :: LaTeX",
]

dependencies = ["httpx>=0.25,<1"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[project.urls]
Documentation = "https://docs.formatex.com/sdk/python"
Repository = "https://github.com/forma-tex/python-sdk"
Homepage = "https://formatex.com"

[tool.hatch.build.targets.wheel]
packages = ["formatex"]

[tool.pytest.ini_options]
markers = [
  "e2e: end-to-end tests against a live API (require FORMATEX_E2E_BASE_URL)",
]
